# mycelium

./: README.md  makefile  mycelium.cabal
app/: Main.lhs
doc/: Jud.html  Main.html  Module.html  Mycelium.html  PrettyBasic.html  Proof.html  Sub.html  Tests.html  style.css
docs/: Dep.html  Expr.html  Fancy.html  Infer.html  Jud.html  Main.html  Module.html  Mycelium.html  Parser.html  Proof.html  Sub.html  Tests.html  Type.html  Var.html
src/: Dep.lhs  Expr.lhs  Fancy.lhs  Infer.lhs  Jud.lhs  Module.lhs  Mycelium.lhs  Parser.lhs  Proof.lhs  Sub.lhs  Type.lhs  Var.lhs
test/: Tests.lhs
