name:           mycelium
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/mycelium#readme>
homepage:       https://github.com/nbloomf/mycelium#readme
bug-reports:    https://github.com/nbloomf/mycelium/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      2018 Automattic, Inc.
license:        GPL3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
  type: git
  location: https://github.com/nbloomf/mycelium

library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
      base >=4.7 && <5

    , containers >=0.5.11 && <1
    , indents >=0.5.0.0 && <1
    , monad-loops >=0.4.3 && <1
    , parsec >=3.1.13.0 && <4
    , QuickCheck >=2.11.3 && <3

  exposed-modules:
      Mycelium
    , Var
    , Sub
    , Expr
    , Type
    , Infer
    , Jud
    , Proof
    , Module
    , Fancy
    , Parser



executable mycelium
  default-language: Haskell2010
  main-is: Main.lhs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , mycelium

    , containers >=0.5.11 && <1
    , parsec >=3.1.13.0 && <4



test-suite mycelium-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Tests.lhs
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , mycelium

    , containers >=0.5.11 && <1
    , parsec >=3.1.13.0 && <4
    , QuickCheck >=2.11.3 && <3
